<resources>
    <string name="app_name">MixCutter</string>
    <string name="title_catalog">Каталог</string>
    <string name="title_vendors">Поставщики</string>
    <string name="title_devices">Устройства</string>
    <string name="title_parts">Детали</string>
    <string name="title_queues">Очереди</string>
    <string name="title_settings">Настройки</string>
    <string name="loading_catalog">Загрузка каталога…</string>
    <string name="loading_plotter">Подготовка плоттера…</string>
    <string name="loading_error">Ошибка загрузки. Перезапустите приложение.</string>
    <string name="no_data">Нет данных</string>
    <string name="action_refresh">Обновить</string>
    <string name="action_save">Сохранить</string>
    <string name="action_device_settings">Настройки устройства</string>
    <string name="action_print">Вырезать</string>
    <string name="action_select">Открыть</string>
    <string name="action_open_section">Открыть раздел</string>
    <string name="action_open_devices">Открыть устройства</string>
    <string name="action_open_parts">Открыть детали</string>
    <string name="action_open_queue">Открыть очередь</string>
    <string name="action_prev">Назад</string>
    <string name="action_skip">Пропустить</string>
    <string name="action_print_next">Вырезать</string>
    <string name="print_unavailable">Файл для резки недоступен</string>
    <string name="device_unavailable">Нет соединения с плоттером</string>
    <string name="print_sent">Файл отправлен на плоттер</string>
    <string name="print_failed">Не удалось отправить на плоттер</string>
    <string name="network_error">Ошибка сети</string>
    <string name="search_hint">Поиск по названию или ID</string>
    <string name="label_base_url">URL очередей</string>
    <string name="label_printer_name">Имя принтера</string>
    <string name="label_print_speed">Скорость реза (1-4)</string>
    <string name="label_print_pressure">Давление</string>
    <string name="settings_saved">Настройки сохранены</string>
    <string name="queues_intro">Здесь можно быстро найти очередь по названию или номеру и открыть ее детали.</string>
    <string name="settings_intro">Настройки сохраняются локально на устройстве. Используйте поля ниже для изменения
        адреса сервера, имени принтера, скорости реза и давления.
    </string>
    <string name="image_preview">Изображение</string>
    <string name="queue_summary_format">%1$s • завершено %2$d из %3$d</string>
    <string name="queue_current_format">Текущий заказ %1$d/%2$d: %3$s • деталей %4$d/%5$d</string>
    <string name="queue_order_title_format">Заказ %1$d</string>
    <string name="queue_order_subtitle_format">%1$s • деталей: %2$d</string>
    <string name="queue_status_done">Вырезан</string>
    <string name="queue_status_current_format">Сейчас вырезается • %1$d/%2$d</string>
    <string name="queue_status_pending_format">Ожидает • %1$d/%2$d</string>
    <string name="queue_complete">Очередь завершена</string>
    <string name="queue_nothing_to_print">В текущем заказе больше нечего вырезать</string>
    <string name="title_catalog_builtin">Предустановлено</string>
    <string name="title_catalog_custom">Свои лекала</string>
    <string name="catalog_builtin_subtitle">Локальный каталог</string>
    <string name="catalog_custom_subtitle">Каталог из базы</string>
    <string name="custom_catalog_error">Каталог недоступен</string>
    <string name="custom_print_unavailable">Файл для резки недоступен</string>
    <string name="catalog_custom_category_subtitle">Открыть список лекал</string>
</resources>





